--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 absl-py==0.5.0
 alabaster==0.7.10
-anaconda-client==1.6.3
-anaconda-navigator==1.6.2
-anaconda-project==0.6.0
+#anaconda-client==1.6.3
+#anaconda-navigator==1.6.2
+#anaconda-project==0.6.0
 asn1crypto==0.22.0
 astor==0.7.1
 astroid==1.4.9
